--- a/Client/src/main/resources/Client/cloud.fxml
+++ b/Client/src/main/resources/Client/cloud.fxml
@@ -13,7 +13,7 @@
 <AnchorPane prefHeight="462.0" prefWidth="699.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Controller">
     <TextField fx:id="in" layoutX="260.0" layoutY="409.0" onAction="#send" prefHeight="24.0" prefWidth="149.0" />
     <TextArea fx:id="out" layoutX="37.0" layoutY="81.0" prefHeight="300.0" prefWidth="210.0" style="-fx-background-color: #3eb489;" />
-   <TextArea layoutX="446.0" layoutY="81.0" prefHeight="300.0" prefWidth="210.0" style="-fx-background-color: #3eb489;" />
+   <TextArea fx:id="CloudDir" layoutX="446.0" layoutY="81.0" prefHeight="300.0" prefWidth="210.0" style="-fx-background-color: #3eb489;" />
    <AnchorPane layoutY="-34.0" prefHeight="98.0" prefWidth="699.0" style="-fx-background-color: #3eb489;">
       <children>
          <Label layoutX="309.0" layoutY="49.0" text="Cloud" textFill="WHITE">
@@ -28,17 +28,17 @@
          </ImageView>
       </children>
    </AnchorPane>
-   <Button layoutX="295.0" layoutY="99.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="96.0" style="-fx-background-color: #3eb489;" text="open" textFill="WHITE">
+   <Button fx:id="open" layoutX="268.0" layoutY="98.0" mnemonicParsing="false" onAction="#open" prefHeight="38.0" prefWidth="166.0" style="-fx-background-color: #3eb489;" text="openCloudDir" textFill="WHITE">
       <font>
          <Font name="System Bold" size="17.0" />
       </font>
    </Button>
-   <Button layoutX="295.0" layoutY="164.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="96.0" style="-fx-background-color: #3eb489;" text="show my dir" textFill="WHITE">
+   <Button fx:id="ShowMyDir" layoutX="265.0" layoutY="214.0" mnemonicParsing="false" onAction="#showMyDir" prefHeight="35.0" prefWidth="166.0" style="-fx-background-color: #3eb489;" text="show my dir" textFill="WHITE">
       <font>
          <Font name="System Bold" size="13.0" />
       </font>
    </Button>
-   <Button layoutX="285.0" layoutY="231.0" mnemonicParsing="false" style="-fx-background-color: #3eb489;" text="show my cloud" textFill="WHITE">
+   <Button fx:id="ShowMyCloud" layoutX="265.0" layoutY="260.0" mnemonicParsing="false" onAction="#showMyCloud" prefHeight="30.0" prefWidth="166.0" style="-fx-background-color: #3eb489;" text="show my cloud" textFill="WHITE">
       <font>
          <Font name="System Bold" size="14.0" />
       </font>
@@ -48,7 +48,12 @@
          <Font name="System Bold" size="12.0" />
       </font>
    </Text>
-   <Button layoutX="285.0" layoutY="279.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="117.0" style="-fx-background-color: #3eb489;" text="delete" textFill="WHITE">
+   <Button layoutX="268.0" layoutY="300.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="166.0" style="-fx-background-color: #3eb489;" text="delete" textFill="WHITE">
+      <font>
+         <Font name="System Bold" size="17.0" />
+      </font>
+   </Button>
+   <Button fx:id="openMyDir" layoutX="268.0" layoutY="152.0" mnemonicParsing="false" onAction="#openMyDir" prefHeight="42.0" prefWidth="166.0" style="-fx-background-color: #3eb489;" text="openMyDir" textFill="WHITE">
       <font>
          <Font name="System Bold" size="17.0" />
       </font>
